--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -64,3 +64,44 @@
   color: #999; /* Placeholder text color */
   font-size: 14px;
 }
+
+
+.logout-button {
+  background-color: #27ada6;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  padding: 0 30px;
+  height: 30x;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.logout-button:hover {
+  background-color: #1f8a8a;
+  transform: scale(1.05);
+}
+
+.logout-text {
+  font-size: 12px;
+ 
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    padding: 0 10px;
+  }
+
+  .navbar-logo img {
+    height: 30px;
+  }
+
+ 
+}
+
+
+@media (max-width: 768px) {
+  .navbar{
+    display: none!important;
+  }
+}
