--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -41,3 +41,98 @@
   font-weight: bold; /* Bold text for active link */
   color: #27ada6;
 }
+
+.mobile-only{
+  display: none;
+}
+.sidebar.open {
+  transform: translateX(0);
+}
+.sidebar-header {
+  
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  background-color: #212529;
+}
+.sidebar-logo img {
+  height: 40px;
+}
+.sidebar-toggle {
+  display: none;
+  font-size: 24px;
+  color: #fff;
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1000;
+}
+
+
+@media (max-width: 768px) {
+  .sidebar-toggle {
+    display: block;
+    position: absolute;
+ 
+  z-index: 100; /* Ensure it stays above other elements */
+  background: none; /* Optional: Adjust as needed */
+  border: none; /* Optional: Adjust as needed */
+  cursor: pointer;
+  overflow-y: hidden;
+  }
+
+  .sidebar {
+   
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%; /* Adjust as needed */
+    background-color: #000929; /* Adjust as needed */
+   text-align: center;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 1000; /* Ensure it stays above other elements */
+    
+  }
+  .mobile-only{
+    display: block; 
+    width: 100%;
+  }
+  .sidebar.open {
+    transform: translateX(0);
+  }
+  
+  .sidebar-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+  
+  .nav-icon {
+    margin-right: 10px; /* Optional: Adjust as needed */
+  }
+  
+  .logout-container {
+    margin-top: auto; /* Pushes logout button to the bottom */
+    padding: 10px; /* Adjust as needed */
+  }
+  
+  .logout-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none; /* Adjust as needed */
+    border: none; /* Adjust as needed */
+    cursor: pointer;
+    padding: 10px; /* Adjust as needed */
+  }
+  
+  .logout-text {
+    margin-left: 5px; /* Adjust as needed */
+  }
+ 
+}
