--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+
 .main-content {
   padding: 20px;
   margin-left: 220px; /* Adjust sidebar width */
@@ -11,12 +12,14 @@ body {
   width: 100%;
   height: 100vh;
 }
+
 .filter-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
+
 .filter-button {
   background-color: #1c2841;
   border-radius: 20px !important;
@@ -52,8 +55,6 @@ body {
   border: none !important;
   border-radius: 20px !important;
 }
-
-
 
 .css-ueukts-MuiButtonBase-root-MuiToggleButton-root.Mui-selected {
   color: #27ada6 !important;
@@ -103,6 +104,10 @@ body {
   background: #555; /* color of the scrollbar handle on hover */
 }
 
+.css-194a1fa-MuiSelect-select-MuiInputBase-input.css-194a1fa-MuiSelect-select-MuiInputBase-input.css-194a1fa-MuiSelect-select-MuiInputBase-input {
+  color: #fff;
+}
+
 .buffering-screen {
   display: flex;
   flex-direction: column;
@@ -136,8 +141,6 @@ p {
   color: #fff;
 }
 
-/* Dashboard.css */
-
 .search-bar {
   display: flex;
   align-items: center;
@@ -164,29 +167,32 @@ p {
   margin-left: -30px; /* Adjust based on icon size */
   color: #27ada6;
 }
-.mobile-only{
-  display: none!important;
+
+.mobile-only {
+  display: none !important;
 }
 
 .css-1akuw9y-MuiDataGrid-overlayWrapperInner {
-    background: #fff;
+  background: #fff;
+}
+
+.css-14mxsc7-MuiDataGrid-root .MuiDataGrid-container--top [role=row], 
+.css-14mxsc7-MuiDataGrid-root .MuiDataGrid-container--bottom [role=row] {
+  background: #1c2841 !important;
+  border-radius: 20px 20px 0px 0px; 
 }
 
 @media (max-width: 767px) {
-  .desktop-only{
-    display: none!important;
+  body {
+    overflow: hidden !important;
   }
-  .mobile-only{
-    display: block!important;
+  .desktop-only {
+    display: none !important;
   }
-  .main-content .toggle-button {
-    color: #7c8dbb;
-    padding-right: 10px;
-    padding-left: 10px;
-    font-size: 11px !important;
-    font-weight: normal;
-    border-bottom: none !important;
+  .mobile-only {
+    display: block !important;
   }
+
   .filter-button {
     background-color: #1c2841;
     border-radius: none !important;
@@ -195,61 +201,88 @@ p {
   .filter-button:hover {
     border-radius: none !important;
   }
+
   .fixed-bottom-bar {
     position: fixed;
-    bottom: 0;
+    bottom: -15px;
     left: 0;
     width: 100%;
-    background-color: #fff; /* Adjust as needed */
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Optional for shadow effect */
+    background-color: none; /* Adjust as needed */
     z-index: 1000; /* Ensure it stays on top */
-    padding: 10px; /* Adjust padding as needed */
-  }
-  .main-content{
     padding: 0;
-    margin-left: 0;
   }
+
   .filter-container {
-    display: flex; /* Show filter container on mobile devices */
+    display: block; /* Show filter container on mobile devices */
     flex-direction: column;
     position: fixed;
     bottom: 0;
-    
-    background: white;
-    padding: 10px;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    padding-bottom: 10px;
+    width: 100% !important;
+    text-align: center !important;
+    justify-content: center !important;
   }
 
   .filter-button {
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: auto;
+    overflow-x: hidden;
+    padding: 10px 0;
+    text-align: center !important;
+    justify-content: center !important;
   }
 
-  
+  .toggle-button {
+    font-weight: normal !important;
+    font-size: 12px !important;
+    padding: 10px !important;
+    text-align: center !important;
+    justify-content: center !important;
+  }
 
   .search-bar input {
     width: calc(100% - 30px); /* Adjust to fit the input and icon */
   }
-  
+
   .search-bar {
     flex: 1;
   }
+  
   .search-bar .icon {
     position: absolute;
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
   }
-  .search-button {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: none;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
+
+  .table-container {
+    height: 100vh; /* 80% height on mobile devices */
+    color: #fff;
   }
 }
+
+/* Loading overlay for all devices */
+.loading-overlay {
+  position: fixed; /* Changed to fixed to cover the entire viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8); /* Adjust opacity as needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it stays on top */
+}
+
+/* Spinner */
+.loading-spinner {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top: 8px solid #3498db;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+
