--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -7,7 +7,7 @@
   left: 0;
   background-color: #000929;
   margin-right: 10px;
-  overflow-y: auto; /* Enable scrolling */
+ 
   z-index: 100; /* Ensure sidebar is above content */
   margin-left:20px;
   border-radius: 10px;
@@ -53,7 +53,7 @@
   justify-content: space-between;
   padding: 10px;
   align-items: center;
-  background-color: #212529;
+  
 }
 .sidebar-logo img {
   height: 40px;
@@ -62,7 +62,7 @@
   display: none;
   font-size: 24px;
   color: #fff;
-  background: none;
+  background: none!important;
   border: none;
   cursor: pointer;
   position: fixed;
@@ -75,8 +75,8 @@
 @media (max-width: 768px) {
   .sidebar-toggle {
     display: block;
-    position: absolute;
- 
+    position: fixed;
+    justify-content: flex-start!important;
   z-index: 100; /* Ensure it stays above other elements */
   background: none; /* Optional: Adjust as needed */
   border: none; /* Optional: Adjust as needed */
@@ -86,12 +86,12 @@
 
   .sidebar {
    
-    top: 0;
-    left: 0;
+    top: -20px;
+    left: -22px;
     height: 100vh;
     width: 100%; /* Adjust as needed */
     background-color: #000929; /* Adjust as needed */
-   text-align: center;
+   text-align: flex-start!important;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
     z-index: 1000; /* Ensure it stays above other elements */
